modify code and diagrams

--- a/2_RentBike/2_RentBike.vcxproj.filters
+++ b/2_RentBike/2_RentBike.vcxproj.filters
@@ -66,6 +66,12 @@
     <ClCompile Include="RentalListUI.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Exit.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="ExitUI.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Signup.h">
@@ -114,6 +120,12 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="RentalListUI.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Exit.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="ExitUI.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
