--- a/2_RentBike/2_RentBike.vcxproj
+++ b/2_RentBike/2_RentBike.vcxproj
@@ -128,6 +128,8 @@
     <ClCompile Include="AddBikeUI.cpp" />
     <ClCompile Include="Bike.cpp" />
     <ClCompile Include="BikeCollection.cpp" />
+    <ClCompile Include="Exit.cpp" />
+    <ClCompile Include="ExitUI.cpp" />
     <ClCompile Include="Login.cpp" />
     <ClCompile Include="LoginUI.cpp" />
     <ClCompile Include="Logout.cpp" />
@@ -146,6 +148,8 @@
     <ClInclude Include="AddBikeUI.h" />
     <ClInclude Include="Bike.h" />
     <ClInclude Include="BikeCollection.h" />
+    <ClInclude Include="Exit.h" />
+    <ClInclude Include="ExitUI.h" />
     <ClInclude Include="Login.h" />
     <ClInclude Include="LoginUI.h" />
     <ClInclude Include="Logout.h" />
